# market-sizing-tool

./: Code  README.md  pyproject.toml
src/market_sizing/: __init__.py  cli.py  core.py
tests/: test_core.py
