[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sizing-tool"
version = "0.1.0"
description = "Scenario analysis tool (TAM/SAM/SOM) with reproducible outputs"
requires-python = ">=3.10"
dependencies = [
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
